package org.stooda.model;

public enum Difficulty {
    EASY, MEDIUM, HARD;
}
