package org.stooda.model;

public class Subject {
    private Area area;
    private String description;
}
