@startuml

class EducationEntity {
    +id: Long
    +name: String
}

class Test {
    +id: Long
    +year: Integer
    +type: TestType
}

class Question {
    +id: Long
    +questionText: String
    +difficulty: Difficulty
    +QuestionNumber: Integer
    +image: byte[]
    +alternatives: List<Alternative>
}
class Alternative {
    +id: Long
    +question: Question
    +text: String
    +correct: Boolean
    +image: byte[]
    +letterId: String
}
class Area {
    +id: Long
    +name: String
}

class Subject {
    +id: Long
    +name: String
}

class TextBase {
    +id: Long
    +content: String
}

enum TestType {
    VESTIBULAR
    ENEM
    CONCURSO
}

enum Difficulty {
    EASY
    MEDIUM
    HARD
}

Test "*"--->"1" EducationEntity : belongs to
Question "*"--->"1" Test : belongs to
Question "1"---"*" Alternative : has
Question "*"--->"*" Area : covers
Question "*"--->"1" Subject : is about
Question "*"--->"0..1" TextBase : can have
@enduml